<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    app:cardCornerRadius="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:drawablePadding="5dp"
            android:textColor="#1E2939"
            android:drawableEnd="@drawable/ic_tick"
            android:text="@string/text_booking_confirm" />

        <TextView
            android:id="@+id/TVConfirm1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="#4A5565"
            android:text="TextView" />

        <TextView
            android:id="@+id/TVConfirm2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="#1E2939"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#4A5565"
            android:text="@string/text_confirm" />

        <Button
            android:id="@+id/BtnBackHome"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#4DB8B0"
            android:text="@string/text_back_home"
            android:textColor="#FFFFFF"
            android:textSize="13sp"
            android:layout_gravity="center"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>