<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="#EEECE1">

    <ImageView
        android:id="@+id/IVBackBooking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_left" />

    <TextView
        android:id="@+id/TVBookSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:text="@string/text_book_session"
        android:textColor="#1E2939"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/IVBackBooking"
        app:layout_constraintTop_toTopOf="@+id/IVBackBooking" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TVBookSession"
        android:layout_marginTop="20dp"
        android:id="@+id/CVSelected"
        app:cardBackgroundColor="#EBA3A3"
        app:cardCornerRadius="14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/TVSelected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_selected_date"
                android:textColor="#1E2939"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/TVDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Date"
                android:layout_marginTop="10dp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_date"
                android:drawablePadding="5dp"/>

            <TextView
                android:id="@+id/TVTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Time"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_time"
                android:drawablePadding="5dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/CVSelected"
        app:layout_constraintTop_toBottomOf="@id/CVSelected"
        android:layout_marginTop="20dp"
        android:id="@+id/CVSelect"
        android:background="#FEFCE8"
        app:cardCornerRadius="14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/TVSubjectBooking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/discovery_subject"
                android:textColor="#1E2939"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_dropdown"
                android:layout_marginTop="10dp"
                android:padding="15dp">

                <Spinner
                    android:id="@+id/SpnSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>

            <TextView
                android:id="@+id/TVDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#1E2939"
                android:textSize="15sp"
                android:text="@string/text_duration" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_dropdown"
                android:layout_marginTop="10dp"
                android:padding="15dp">

                <Spinner
                    android:id="@+id/SpnDuration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>

            <TextView
                android:id="@+id/TVNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#1E2939"
                android:textSize="15sp"
                android:text="@string/text_notes" />

            <EditText
                android:id="@+id/ETNotes"
                android:layout_width="match_parent"
                android:layout_height="157dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_dropdown"
                android:gravity="top"
                android:hint="@string/text_cover"
                android:padding="15dp"
                android:textSize="14sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/BtnConfirmBooking"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#4DB8B0"
        android:text="@string/text_confirm_booking"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CVSelect"/>
</androidx.constraintlayout.widget.ConstraintLayout>
